--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         <li> <a type="button" class="btn btn-default navbar-btn filter" data-filter=".profile">
           <div class="sort" data-sort="myorder:asc"> Profile </div>
           </a> </li>
-        <li class="latest"><a class="btn btn-default navbar-btn">
-          <div class="sort" data-sort="myorder:desc">Latest</div>
+        <li class="latest"><a class="btn btn-default navbar-btn" data-filter="all">
+          <div class="sort" data-sort="myorder:desc">Sort : Latest</div>
           </a></li>
         <li><a class="btn btn-default navbar-btn filter" data-filter=".portfolio">
           <div class="sort" data-sort="myorder:asc">Portfolio</div>
           </a></li>
         <li><a class="btn btn-default navbar-btn filter" data-filter=".sketches">
-          <div class="sort" data-sort="myorder:asc">Sketches</div>
+          <div class="sort" data-sort="myorder:asc">Blog</div>
           </a></li>
         <li><a class="btn btn-default navbar-btn filter" data-filter="all">
           <div>All</div>
@@ -68,7 +68,7 @@
       <div class="descript">
         <div class="note">
           <h5> DBX Front View</h5>
-          <h6>Portfolio</h6>
+          <h6>Aston Martin Portfolio</h6>
           <p></p>
         </div>
         <!--note--> 
@@ -81,7 +81,7 @@
       <div class="descript">
         <div class="note">
           <h5> DBX Inspiration</h5>
-          <h6>Portfolio</h6>
+          <h6>Aston Martin Portfolio</h6>
           <p>The Aston Martin current design language is beautiful, but showing some age.  So what is the next step?  This project is not to find the lines of Aston Martin's yesterday, but carry on the feeling to the future.</p>
           <p>The Aston Martin's key design langauge features on Quality of Materials.  Certain materials have certain aesthetics.  Metal: large surface planes divided by sharp creases with a reflective lustre.  Leather is soft, thin but durable.  This brings the high craftsmanship into focus, something that makes Aston Martin stand out.</p>
         </div>
@@ -591,7 +591,7 @@
             <h2>GTR - Creative Solutions</h2>
             <p class="email">gthambirajah@hotmail.com</p>
             <div class="cv">
-              <div class="container-fluid">
+              <div class="profileContainer container-fluid">
                 <div class="row">
                   <div class="col-sm-6">
                     <p>My goal in the world of design is to bring forth new applications of matured and new technologies to the user experience.  Problem solving whether it is form, function or experience is where my passion for design comes from.  My designs do the complexities so that the end user can have simplicity.</p>
