--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="sort" data-sort="myorder:asc">Portfolio</div>
           </a></li>
         <li><a class="btn btn-default navbar-btn filter" data-filter=".sketches">
-          <div class="sort" data-sort="myorder:asc">Blog</div>
+          <div class="sort" data-sort="myorder:asc">Web Log</div>
           </a></li>
         <li><a class="btn btn-default navbar-btn filter" data-filter="all">
           <div>All</div>
