Adding Sketches (to Web Log)

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -571,6 +571,91 @@
       <!--descript--> 
     </div>
     <!--mix--> 
+    <div class="mix sketches" data-myorder="43">
+      <div class="mixImg"> <img src="Img/3Dprint1.jpg"/> </div>
+      <div class="descript">
+        <div class="note">
+          <h5>Early 3D Printed Car Sketches</h5>
+          <h6>April 28, 2014</h6>
+          <p>Some early sketches for the LM 3D printed design project.  </p>
+          <p>Pen.</p>
+        </div>
+        <!--note--> 
+      </div>
+      <!--descript--> 
+    </div>
+    <!--mix-->
+    <div class="mix sketches" data-myorder="44">
+      <div class="mixImg"> <img src="Img/3Dprint2.jpg"/> </div>
+      <div class="descript">
+        <div class="note">
+          <h5>Early 3D Printed Car Sketches (Interior)</h5>
+          <h6>April 28, 2014</h6>
+          <p>Some early sketches for the LM 3D printed design project.  </p>
+          <p>Pen.</p>
+        </div>
+        <!--note--> 
+      </div>
+      <!--descript--> 
+    </div>
+    <!--mix--> 
+    <div class="mix sketches" data-myorder="45">
+      <div class="mixImg"> <img src="Img/3Dprint3.jpg"/> </div>
+      <div class="descript">
+        <div class="note">
+          <h5>Early 3D Printed Car Sketches</h5>
+          <h6>April 28, 2014</h6>
+          <p>Some early sketches for the LM 3D printed design project.  </p>
+          <p>Pen.</p>
+        </div>
+        <!--note--> 
+      </div>
+      <!--descript--> 
+    </div>
+    <!--mix--> 
+    <div class="mix sketches" data-myorder="46">
+      <div class="mixImg"> <img src="Img/3Dprint4.jpg"/> </div>
+      <div class="descript">
+        <div class="note">
+          <h5>Early 3D Printed Car Sketches (Interior)</h5>
+          <h6>April 28, 2014</h6>
+          <p>Some early sketches for the LM 3D printed design project.  </p>
+          <p>Pen.</p>
+        </div>
+        <!--note--> 
+      </div>
+      <!--descript--> 
+    </div>
+    <!--mix--> 
+    <div class="mix sketches" data-myorder="47">
+      <div class="mixImg"> <img src="Img/3Dprint5.jpg"/> </div>
+      <div class="descript">
+        <div class="note">
+          <h5>Drawing while Video Processing</h5>
+          <h6>April 28, 2014</h6>
+          <p>Spacey theme IP and seat.</p>
+          <p>Pen.</p>
+        </div>
+        <!--note--> 
+      </div>
+      <!--descript--> 
+    </div>
+    <!--mix--> 
+    <div class="mix sketches" data-myorder="48">
+      <div class="mixImg"> <img src="Img/3Dprint6.jpg"/> </div>
+      <div class="descript">
+        <div class="note">
+          <h5>Drawing while Video Processing</h5>
+          <h6>April 28, 2014</h6>
+          <p>IPs</p>
+          <p>Pen.</p>
+        </div>
+        <!--note--> 
+      </div>
+      <!--descript--> 
+    </div>
+    <!--mix--> 
+
     <!--
     <div class="mix sketches" data-myorder="41">
       <div class="mixImg"> <img src="Img/G_Kiska24.jpg"/> </div>
