Shortened Download Links

--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
           <div class="profileImg">
             <h2>CV Download</h2>
             <p class="email">62 KB</p>
-            <a type="button" href="https://mega.co.nz/#!2d4HnLbB!H6MfHyEdeOQaeca17nXZs9O8eqwMh-BpU8tLL3ovHTQ" class="btn btn-default" target="_blank">
+            <a type="button" href="http://ow.ly/wpZwl" class="btn btn-default" target="_blank">
                <span class="glyphicon glyphicon glyphicon-save"></span>
             </a> 
           </div>
@@ -691,7 +691,7 @@
           <div class="profileImg">
             <h2>Portfolio Download</h2>
             <p class="email">33.1MB</p>
-            <a type="button" href="https://mega.co.nz/#!HZQSTYxY!YeOAh0TCBK35NB5TSoTcDBJTDJDkSoAnOxV65t3ArmY" class="btn btn-default" target="_blank">
+            <a type="button" href="http://ow.ly/wpZVZ" class="btn btn-default" target="_blank">
               <span class="glyphicon glyphicon glyphicon-save"></span>
             </a> 
           </div>
