Adding 3D printed car

--- a/index.html
+++ b/index.html
@@ -711,7 +711,121 @@
       <!--descript--> 
     </div>
     <!--mix--> 
-    
+    <div class="mix sketches" data-myorder="51">
+      <div class="mixImg"> <img src="Img/daemon.jpg"/> </div>
+      <div class="descript">
+        <div class="note">
+          <h5>3D Printed Car - The View</h5>
+          <h6>May 14, 2014</h6>
+          <p>For the local motors 3D printed car challenge, I wanted an 'interior - exterior' merger.  Often the interior has a driver focus, but what if the full car?</p>
+          <p>Pen.</p>
+        </div>
+        <!--note--> 
+      </div>
+      <!--descript--> 
+    </div>
+    <!--mix-->
+    <div class="mix sketches" data-myorder="52">
+      <div class="mixImg"> <img src="Img/daemon5.jpg"/> </div>
+      <div class="descript">
+        <div class="note">
+          <h5>Final 3D Printed Car</h5>
+          <h6>May 14, 2014</h6>
+          <p>Some final sketches.  I wanted this car to have everything you need, nothing you don't.  No grille since its electric, but a 'heat-sink.'  Since the car is going to be printed with one pass additively it was important to eliminate as many parts as possible.</p>
+          <p>Pen.</p>
+        </div>
+        <!--note--> 
+      </div>
+      <!--descript--> 
+    </div>
+    <!--mix-->
+    <div class="mix sketches" data-myorder="53">
+      <div class="mixImg"> <img src="Img/daemon6.jpg"/> </div>
+      <div class="descript">
+        <div class="note">
+          <h5>Final Sketches</h5>
+          <h6>May 14, 2014</h6>
+          <p>Since going crasy on voronoi or tree root patterns was the obvious go to for anything 3D printed I wanted to use this at a bare minimum.  Instead I wanted to achieve an curves used by the architect, Zaha Hadid.</p>
+          <p>Pen.</p>
+        </div>
+        <!--note--> 
+      </div>
+      <!--descript--> 
+    </div>
+    <!--mix-->
+    <div class="mix sketches" data-myorder="51">
+      <div class="mixImg"> <img src="Img/daemonSubmit.jpg"/> </div>
+      <div class="descript">
+        <div class="note">
+          <h5>Side Profile</h5>
+          <h6>May 14, 2014</h6>
+          <p>For the local motors 3D printed car challenge, I wanted an 'interior - exterior' merger.  Often the interior has a driver focus, but what if the full car?</p>
+          <p>Pen.</p>
+        </div>
+        <!--note--> 
+      </div>
+      <!--descript--> 
+    </div>
+    <!--mix-->
+    <div class="mix sketches" data-myorder="52">
+      <div class="mixImg"> <img src="Img/daemonSubmit2.jpg"/> </div>
+      <div class="descript">
+        <div class="note">
+          <h5>Front View.  This design is asymmetrical to highlight the constaint of symmetry in modern manufacturing no longer applying here</h5>
+          <h6>May 14, 2014</h6>
+          <p></p>
+          <p>Pen.</p>
+        </div>
+        <!--note--> 
+      </div>
+      <!--descript--> 
+    </div>
+    <!--mix-->
+     <!--mix-->
+    <div class="mix sketches" data-myorder="52">
+      <div class="mixImg"> <img src="Img/daemonSubmit3.jpg"/> </div>
+      <div class="descript">
+        <div class="note">
+          <h5>Rear View</h5>
+          <h6>May 14, 2014</h6>
+          <p></p>
+          <p>Pen.</p>
+        </div>
+        <!--note--> 
+      </div>
+      <!--descript--> 
+    </div>
+    <!--mix-->
+    <!--mix-->
+    <div class="mix sketches" data-myorder="52">
+      <div class="mixImg"> <img src="Img/daemonSubmit4.jpg"/> </div>
+      <div class="descript">
+        <div class="note">
+          <h5>Features/h5>
+          <h6>May 14, 2014</h6>
+          <p>In my quest to reduce number of parts required I decided why not have internal components printed as well.  Brake lines for example or the electrical harness which now for the most part switched to fibre optic cables to reduce weight (since many signals can be transmitted through one cable as opposed to copper) and increase data speeds of components to ECU.  Even the lighting uses these, which means only one light is required per function (one light source for headlights etc.)</p>
+          <p>Pen.</p>
+        </div>
+        <!--note--> 
+      </div>
+      <!--descript--> 
+    </div>
+    <!--mix-->
+    <!--mix-->
+    <div class="mix sketches" data-myorder="52">
+      <div class="mixImg"> <img src="Img/daemonSubmit5.jpg"/> </div>
+      <div class="descript">
+        <div class="note">
+          <h5Rear Mis-en-scene view</h5>
+          <h6>May 14, 2014</h6>
+          <p></p>
+          <p>Pen.</p>
+        </div>
+        <!--note--> 
+      </div>
+      <!--descript--> 
+    </div>
+    <!--mix-->
     <!--
     <div class="mix sketches" data-myorder="41">
       <div class="mixImg"> <img src="Img/G_Kiska24.jpg"/> </div>
