--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
       <!--descript--> 
     </div>
     <!--mix-->
-    <div class="mix sketches" data-myorder="51">
+    <div class="mix sketches" data-myorder="57">
       <div class="mixImg"> <img src="Img/daemonSubmit.jpg"/> </div>
       <div class="descript">
         <div class="note">
@@ -767,11 +767,11 @@
       <!--descript--> 
     </div>
     <!--mix-->
-    <div class="mix sketches" data-myorder="52">
+    <div class="mix sketches" data-myorder="56">
       <div class="mixImg"> <img src="Img/daemonSubmit2.jpg"/> </div>
       <div class="descript">
         <div class="note">
-          <h5>Front View.  This design is asymmetrical to highlight the constaint of symmetry in modern manufacturing no longer applying here</h5>
+          <h5>Asymmetry</h5>
           <h6>May 14, 2014</h6>
           <p></p>
           <p>Pen.</p>
@@ -781,8 +781,7 @@
       <!--descript--> 
     </div>
     <!--mix-->
-     <!--mix-->
-    <div class="mix sketches" data-myorder="52">
+    <div class="mix sketches" data-myorder="55">
       <div class="mixImg"> <img src="Img/daemonSubmit3.jpg"/> </div>
       <div class="descript">
         <div class="note">
@@ -797,11 +796,11 @@
     </div>
     <!--mix-->
     <!--mix-->
-    <div class="mix sketches" data-myorder="52">
+    <div class="mix sketches" data-myorder="54">
       <div class="mixImg"> <img src="Img/daemonSubmit4.jpg"/> </div>
       <div class="descript">
         <div class="note">
-          <h5>Features/h5>
+          <h5>Features</h5>
           <h6>May 14, 2014</h6>
           <p>In my quest to reduce number of parts required I decided why not have internal components printed as well.  Brake lines for example or the electrical harness which now for the most part switched to fibre optic cables to reduce weight (since many signals can be transmitted through one cable as opposed to copper) and increase data speeds of components to ECU.  Even the lighting uses these, which means only one light is required per function (one light source for headlights etc.)</p>
           <p>Pen.</p>
@@ -812,7 +811,7 @@
     </div>
     <!--mix-->
     <!--mix-->
-    <div class="mix sketches" data-myorder="52">
+    <div class="mix sketches" data-myorder="53">
       <div class="mixImg"> <img src="Img/daemonSubmit5.jpg"/> </div>
       <div class="descript">
         <div class="note">
